--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         padding: 0;
         display: flex;
         min-height: 100vh;
+        zoom: 80%; 
       }
 
       /* Sidebar estilo DeepSeek */
