--- a/index.html
+++ b/index.html
@@ -1037,18 +1037,14 @@
           </div>
 
           <div class="data-selector">
-            <label for="obra-select"
-              >Selecione a obra energizada (com data na coluna AL):</label
-            >
+            <label for="obra-select">Selecione a obra energizada: </label>
             <select id="obra-select">
               <option value="">Selecione uma obra</option>
               <!-- As opções serão preenchidas via JavaScript -->
             </select>
           </div>
 
-          <div id="notification" class="notification">
-            Nenhuma obra com data de energização encontrada no arquivo JSON.
-          </div>
+          <div id="notification" class="notification"></div>
 
           <div class="energizacao-container">
             <div class="energizacao-form">
