--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
         align-items: center;
         text-align: center;
         flex: 1;
+        margin-left: -150px;
       }
 
       h1 {
@@ -223,12 +224,12 @@
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       }
 
-      .logo {
+      /*.logo {
         width: 180px;
         height: auto;
         margin-top: -79px;
         margin-bottom: 0px;
-      }
+      }*/
 
       .subtitle {
         font-size: 1.1rem;
@@ -793,7 +794,7 @@
               </p>
               <div class="current-date" id="current-date">Data de hoje :</div>
             </div>
-            <img src="NorteTech.png" alt="Norte Tech Logo" class="logo" />
+            <!--<img src="NorteTech.png" alt="Norte Tech Logo" class="logo" />-->
           </header>
 
           <div class="export-buttons">
