added mariua colors and logo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         --border-color: #30363d;
         --sidebar-bg: #0a0d14;
         --sidebar-width: 280px;
+        --primarycolormariua:#159398;
+        --secondarycolormariua: #f4783b;
       }
 
       * {
@@ -213,23 +215,23 @@
         align-items: center;
         text-align: center;
         flex: 1;
-        margin-left: -150px;
+        margin-left: 50px;
       }
 
       h1 {
         font-size: 2.5rem;
         margin-bottom: 10px;
         margin-left: 117px;
-        color: #e2c529;
+        color: var(--primarycolormariua) ;
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       }
 
-      /*.logo {
-        width: 180px;
-        height: auto;
-        margin-top: -79px;
+      .logo {
+        width: 227px;
+        height: 69px;
+        margin-top: -17px;
         margin-bottom: 0px;
-      }*/
+      }
 
       .subtitle {
         font-size: 1.1rem;
@@ -242,7 +244,7 @@
       .current-date {
         font-size: 1.1rem;
         margin-top: 15px;
-        color: #e2c529;
+        color: var(--secondarycolormariua) ;
         font-weight: bold;
         margin-left: 108px;
       }
@@ -519,7 +521,7 @@
       }
 
       .status-active {
-        background-color: #ffbd09;
+        background-color: var(--secondarycolormariua);
         color: white;
       }
 
@@ -794,7 +796,7 @@
               </p>
               <div class="current-date" id="current-date">Data de hoje :</div>
             </div>
-            <!--<img src="NorteTech.png" alt="Norte Tech Logo" class="logo" />-->
+            <img src="Color logo - no background.png" alt="Norte Tech Logo" class="logo" />
           </header>
 
           <div class="export-buttons">
