--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         --border-color: #30363d;
         --sidebar-bg: #0a0d14;
         --sidebar-width: 280px;
-        --primarycolormariua:#159398;
+        --primarycolormariua: #159398;
         --secondarycolormariua: #f4783b;
       }
 
@@ -222,7 +222,7 @@
         font-size: 2.5rem;
         margin-bottom: 10px;
         margin-left: 117px;
-        color: var(--primarycolormariua) ;
+        color: var(--primarycolormariua);
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       }
 
@@ -244,7 +244,7 @@
       .current-date {
         font-size: 1.1rem;
         margin-top: 15px;
-        color: var(--secondarycolormariua) ;
+        color: var(--secondarycolormariua);
         font-weight: bold;
         margin-left: 108px;
       }
@@ -526,13 +526,13 @@
       }
 
       .status-pending {
-        background-color: #0718ff;
+        background-color: var(--primarycolormariua);
         color: white;
       }
 
       .status-completed {
         background-color: #00ff15;
-        color: white;
+        color: black;
       }
 
       footer {
@@ -796,7 +796,11 @@
               </p>
               <div class="current-date" id="current-date">Data de hoje :</div>
             </div>
-            <img src="Color logo - no background.png" alt="Norte Tech Logo" class="logo" />
+            <img
+              src="Color logo - no background.png"
+              alt="Norte Tech Logo"
+              class="logo"
+            />
           </header>
 
           <div class="export-buttons">
